objects/Twilio_Call_History__c.object
<CustomObject>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Picked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Twilio Call History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>From__c</columns>
        <columns>To__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>To__c</columns>
        <columns>From__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TWL-{00000}</displayFormat>
        <label>Twilio Call History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Twilio Call Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>